--- a/login.html
+++ b/login.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-
 <html lang="es">
 <head>
-<meta charset="utf-8"/>
-<title>Inicia sesión | AquiVivo</title>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&amp;family=Playfair+Display:wght@700;900&amp;display=swap" rel="stylesheet"/>
-<link href="assets/css/styles.css" rel="stylesheet"/>
-<style>
+  <meta charset="UTF-8" />
+  <title>Inicia sesión | AquiVivo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/styles.css" />
+  <style>
     .auth-wrap{ max-width: 920px; margin: 0 auto; display:grid; grid-template-columns: 1.1fr .9fr; gap: 16px; align-items: start; }
     @media (max-width: 860px){ .auth-wrap{ grid-template-columns: 1fr; } }
     .form-card{ background: white; color: var(--blue-main); border-radius: 26px; padding: 22px; box-shadow: 0 18px 70px rgba(0,0,0,.22); }
@@ -25,53 +24,55 @@
     .reset-link{ margin-top: 10px; display:inline-flex; align-items:center; gap: 10px; border:none; background:transparent; color:#003893; font-weight:900; cursor:pointer; text-decoration: underline; padding: 0; }
     .reset-link:hover{ opacity:.9; }
   </style>
-<script defer="True" src="assets/js/layout.js"></script><link href="assets/img/logo.png" rel="icon"/></head>
+</head>
 <body>
-<div id="appHeader"></div>
+  <div id="appHeader"></div>
 <main class="page">
-<div class="container">
-<div class="auth-wrap">
-<div class="hero-card">
-<h1 class="hero-title glow-text">Inicia sesión</h1>
-<p class="hero-subtitle">Accede a los cursos A1/A2 y tu panel de estudiante.</p>
-<div class="stats" style="margin-top:16px;">
-</div>
-<div class="quick-links">
-<a class="btn-white-outline" href="Programa.html">Programa</a>
-<a class="btn-white-outline" href="Ebooks.html">E-books</a>
-<a class="btn-white-outline" href="Contacto.html">Contacto</a>
-</div>
-</div>
-<div class="form-card">
-<div class="form-title">Inicia sesión / Regístrate</div>
-<p class="form-sub">El registro crea una cuenta. Después de iniciar sesión, irás a tu panel de estudiante.</p>
-<div class="field">
-<label for="name">Nombre (opcional)</label>
-<input class="input" id="name" placeholder="Nombre (solo en registro)" type="text"/>
-</div>
-<div class="field">
-<label for="email">Correo electrónico</label>
-<input class="input" id="email" placeholder="Correo electrónico" type="email"/>
-</div>
-<div class="field">
-<label for="password">Contraseña</label>
-<div style="position:relative;">
-<input class="input" id="password" placeholder="Contraseña" style="padding-right:48px;" type="password"/>
-<button id="togglePassword" style="position:absolute; right:12px; top:50%; transform:translateY(-50%); border:none; background:transparent; cursor:pointer; font-size:18px; opacity:.75;" title="Mostrar / ocultar contraseña" type="button">👁️</button>
-</div>
-</div>
-<div class="actions">
-<button class="btn-yellow" id="loginBtn" type="button">Inicia sesión</button>
-<button class="btn-red" id="registerBtn" type="button">Regístrate</button>
-</div>
-<button class="reset-link" id="resetPasswordBtn" type="button">Olvidé mi contraseña</button>
-<div class="msg" id="message"></div>
-<div class="hint">
+    <div class="container">
+      <div class="auth-wrap">
+        <div class="hero-card">
+          <h1 class="hero-title glow-text">Inicia sesión</h1>
+          <p class="hero-subtitle">Accede a los cursos A1/A2 y tu panel de estudiante.</p>
+          <div class="stats" style="margin-top:16px;">
+          </div>
+          <div class="quick-links">
+            <a class="btn-white-outline" href="Programa.html">Programa</a>
+            <a class="btn-white-outline" href="Ebooks.html">E-books</a>
+            <a class="btn-white-outline" href="Contacto.html">Contacto</a>
+          </div>
+        </div>
+        <div class="form-card">
+          <div class="form-title">Inicia sesión / Regístrate</div>
+          <p class="form-sub">El registro crea una cuenta. Después de iniciar sesión, irás a tu panel de estudiante.</p>
+          <div class="field">
+            <label for="name">Nombre (opcional)</label>
+            <input class="input" type="text" id="name" placeholder="Nombre (solo en registro)">
+          </div>
+          <div class="field">
+            <label for="email">Correo electrónico</label>
+            <input class="input" type="email" id="email" placeholder="Correo electrónico">
+          </div>
+          <div class="field">
+            <label for="password">Contraseña</label>
+            <div style="position:relative;">
+              <input class="input" type="password" id="password" placeholder="Contraseña" style="padding-right:48px;">
+              <button type="button" id="togglePassword" title="Mostrar / ocultar contraseña" style="position:absolute; right:12px; top:50%; transform:translateY(-50%); border:none; background:transparent; cursor:pointer; font-size:18px; opacity:.75;">👁️</button>
+            </div>
+          </div>
+          <div class="actions">
+            <button class="btn-yellow" id="loginBtn" type="button">Inicia sesión</button>
+            <button class="btn-red" id="registerBtn" type="button">Regístrate</button>
+          </div>
+          <button class="reset-link" type="button" id="resetPasswordBtn">Olvidé mi contraseña</button>
+          <div id="message" class="msg"></div>
+          <div class="hint">
             Al registrarte, aceptas nuestros <a href="TOS.html" target="_blank">Términos de Servicio</a> y <a href="Privacy.html" target="_blank">Política de Privacidad</a>
-</div>
-</div>
-</div>
-<script type="module">
+          </div>
+        </div>
+      </div
+  </main>
+
+  <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
     import {
       getAuth,
@@ -206,4 +207,4 @@
               }
             });
           </script>
-</div></main><div id="appFooter"></div></body></html>
+
