--- a/course.html
+++ b/course.html
@@ -464,14 +464,8 @@ body{
 </head>
 
 <body>
+  <div id="appHeader"></div>
   <div id=\"appHeader\"></div>
-<div class="ui-scale-wrapper">
-  <div style="display:flex; gap:10px; align-items:center">
-      <button class="btnNav" id="btnBack" type="button" onclick="window.location.href='ESPANEL.html'">⬅️ ATRÁS</button>
-      <button class="btnNav" id="btnHome" type="button" onclick="window.location.href='index.html'">🏠 INICIO</button>
-      <button class="btnLogout" id="btnLogout" type="button">Cerrar sesión</button>
-    </div>
-  </div>
 
   <main class="page">
     <div class="container">
@@ -1180,6 +1174,6 @@ body{
 </script>
 
 </div>
-  <script src="assets/js/layout.js"></script>
+  <script src="assets/js/layout.js" defer></script>
 </body>
 </html>
