--- a/ejercicio.html
+++ b/ejercicio.html
@@ -34,87 +34,6 @@
         padding: 22px 16px 60px;
       }
 
-      .nav-glass {
-        position: sticky;
-        top: 0;
-        z-index: 50;
-        background: rgba(0, 56, 147, 0.78);
-        backdrop-filter: blur(10px);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.14);
-      }
-      .nav-glass::after {
-        content: "";
-        display: block;
-        height: 3px;
-        background: linear-gradient(90deg, var(--yellow), var(--blue), var(--red));
-        opacity: 0.85;
-      }
-      .nav-inner {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 14px;
-        padding: 14px 16px;
-        max-width: 1100px;
-        margin: 0 auto;
-      }
-      .brand {
-        display: flex;
-        align-items: center;
-        gap: 12px;
-        min-width: 180px;
-      }
-      .logo-flag {
-        width: 42px;
-        height: 42px;
-        border-radius: 999px;
-        background: linear-gradient(
-          180deg,
-          var(--yellow) 0 33.33%,
-          var(--blue) 33.33% 66.66%,
-          var(--red) 66.66% 100%
-        );
-        box-shadow: 0 12px 26px rgba(0, 0, 0, 0.25);
-      }
-      .name {
-        font-family: "Playfair Display", serif;
-        font-weight: 900;
-        font-size: 24px;
-        color: white;
-        letter-spacing: 0.2px;
-      }
-
-      .btn {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-        padding: 12px 16px;
-        border-radius: 999px;
-        font-weight: 900;
-        cursor: pointer;
-        text-decoration: none;
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        user-select: none;
-        transition: transform 0.12s ease, filter 0.12s ease;
-        background: rgba(255, 255, 255, 0.12);
-        color: white;
-        white-space: nowrap;
-      }
-      .btn:hover { transform: translateY(-2px); filter: brightness(1.03); }
-      .btn:disabled { opacity: 0.6; cursor: not-allowed; transform: none; }
-
-      .btn-yellow {
-        background: rgba(252, 209, 22, 0.95);
-        border-color: rgba(252, 209, 22, 0.7);
-        color: var(--ink);
-      }
-      .btn-red {
-        background: rgba(206, 17, 38, 0.92);
-        border-color: rgba(206, 17, 38, 0.8);
-        color: white;
-      }
-
       .sessionBar {
         display: none !important;
         background: var(--yellow);
@@ -255,7 +174,6 @@
         align-items: start;
       }
       @media (max-width: 860px) {
-        .nav-inner { flex-wrap: wrap; }
         .adminGrid { grid-template-columns: 1fr; }
         h1 { font-size: 36px; }
       }
@@ -346,7 +264,6 @@
       }
       .dragHint { cursor: grab; }
       .dragging { opacity: .6; transform: scale(.99); }
-
 
       /* --- Lesson navigation + completion --- */
       .lessonTopTools{
@@ -464,7 +381,6 @@
         align-items:center;
       }
 
-
       /* === PATCH UI: unified glass inputs (filters + common inputs) === */
       #filtersCard input,
       #filtersCard select,
@@ -506,7 +422,6 @@
       select{
         font-family: Montserrat, Arial, sans-serif;
       }
-
 
       #filtersCard textarea,
       #importJsonArea{
@@ -550,25 +465,9 @@
 </head>
 
   <body>
-  <div id=\"appHeader\"></div>
-    <header class="nav-glass">
-      <div class="nav-inner">
-        <div class="brand">
-          <div class="logo-flag" aria-hidden="true"></div>
-          <div class="name">Aqui vivo</div>
-        </div>
-
-        <div style="display:flex; gap:10px; flex-wrap:wrap; align-items:center">
-          <a class="btn" id="btnPanel" href="#">🧩 Panel</a>
-          <a class="btn btn-yellow" id="btnLeccion" href="#">📖 Lección</a>
-          <a class="btn" id="btnInicio" href="#">🏠 Inicio</a>
-          <button class="btn" id="btnAtras" type="button">⬅️ Atrás</button>
-          <button class="btn btn-red" id="btnLogout" type="button">Cerrar sesión</button>
-        </div>
-      </div>
-    </header>
-
-    <div class="sessionBar">
+  <div id="appHeader"></div>
+<div id=\"appHeader\"></div>
+<div class="sessionBar">
       Sesión activa: <strong id="sessionEmail">Cargando...</strong>
     </div>
 
@@ -2210,6 +2109,6 @@ return `
 		if (previewModal) previewModal.style.display = "block";
       }
  </script>
-    <script src="assets/js/layout.js"></script>
+    <script src="assets/js/layout.js" defer></script>
 </body>
 </html>
