--- a/ejercicioadmin.html
+++ b/ejercicioadmin.html
@@ -1,5 +1,10 @@
 
-
+      // Extra admin nav links (no new tab)
+      const btnStudentView = document.getElementById("btnStudentView");
+      const btnLessonAdmin = document.getElementById("btnLessonAdmin");
+      if (btnStudentView) btnStudentView.href = `ejercicio.html?level=${encodeURIComponent(LEVEL)}&id=${encodeURIComponent(TOPIC_ID)}`;
+      if (btnLessonAdmin) btnLessonAdmin.href = `lessonadmin.html?level=${encodeURIComponent(LEVEL)}&id=${encodeURIComponent(TOPIC_ID)}`;
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -552,24 +557,7 @@
 
   <body>
   <div id=\"appHeader\"></div>
-    <header class="nav-glass">
-      <div class="nav-inner">
-        <div class="brand">
-          <div class="logo-flag" aria-hidden="true"></div>
-          <div class="name">Aqui vivo</div>
-        </div>
-
-        <div style="display:flex; gap:10px; flex-wrap:wrap; align-items:center">
-          <a id="backToCourse" class="btn" href="course.html?level=A1">⬅️ Volver al curso</a>
-          <a class="btn" id="levelsBtn" href="course.html?level=A1">📚 Niveles</a>
-          <button class="btn btn-yellow" id="btnCopyLink" type="button">🔗 Copiar enlace</button>
-          <a class="btn" id="btnStudentView" href="#">👀 Vista alumno</a>
-          <a class="btn" id="btnLessonAdmin" href="#">🛠 Admin lección</a>
-          <button class="btn" id="btnReload" type="button">🔄 Recargar</button>
-        </div>
-      </div>
-    </header>
-
+  <div id=\"appHeader\"></div>
     <div class="sessionBar">
       Sesión activa: <strong id="sessionEmail">Cargando...</strong>
     </div>
