--- a/ejercicio.html
+++ b/ejercicio.html
@@ -10,8 +10,7 @@
       rel="stylesheet"
     />
 
-    <style>
-      :root {
+    <style>:root {
         --yellow: #fcd116;
         --blue: #003893;
         --red: #ce1126;
@@ -19,20 +18,6 @@
       }
 
       * { box-sizing: border-box; }
-
-      body {
-        margin: 0;
-        font-family: Montserrat, Arial, sans-serif;
-        min-height: 100vh;
-        background: linear-gradient(180deg, #001a4d, #003893, #001a4d);
-        color: white;
-      }
-
-      .container {
-        max-width: 1100px;
-        margin: 0 auto;
-        padding: 22px 16px 60px;
-      }
 
       .sessionBar {
         display: none !important;
@@ -61,15 +46,6 @@
         line-height: 1.6;
       }
 
-      .card {
-        background: rgba(255, 255, 255, 0.1);
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        backdrop-filter: blur(12px);
-        border-radius: 16px;
-        padding: 16px;
-        margin: 14px 0;
-      }
-
       .metaRow {
         display: flex;
         gap: 10px;
@@ -83,8 +59,8 @@
         border-radius: 999px;
         padding: 6px 10px;
         border: 1px solid rgba(255, 255, 255, 0.18);
-        background: rgba(255, 255, 255, 0.12);
-        color: white;
+        background: linear-gradient(180deg, #001a4d, #003893, #001a4d);
+        color: #fff;
       }
       .pill-blue { border-color: rgba(0, 56, 147, 0.35); }
       .pill-yellow {
@@ -105,8 +81,8 @@
 
       /* Exercises */
       .exercise {
-        background: white;
-        color: var(--ink);
+        background: linear-gradient(180deg, #001a4d, #003893, #001a4d);
+        color: #fff;
         border-radius: 16px;
         padding: 16px;
         margin: 10px 0;
@@ -125,8 +101,8 @@
         font-weight: 900;
         padding: 6px 10px;
         border-radius: 999px;
-        background: rgba(0, 56, 147, 0.08);
-        color: var(--blue);
+        background: linear-gradient(180deg, #001a4d, #003893, #001a4d);
+        color: #fff;
         border: 1px solid rgba(0, 56, 147, 0.16);
         margin-bottom: 10px;
       }
@@ -187,8 +163,8 @@
         width: 100%;
         border-radius: 12px;
         border: 1px solid rgba(255, 255, 255, 0.25);
-        background: rgba(255, 255, 255, 0.12);
-        color: white;
+        background: linear-gradient(180deg, #001a4d, #003893, #001a4d);
+        color: #fff;
         padding: 10px 12px;
         font-size: 14px;
         outline: none;
@@ -224,8 +200,8 @@
         padding: 8px 10px;
         font-weight: 900;
         cursor: pointer;
-        background: var(--red);
-        color: white;
+       background: linear-gradient(180deg, #001a4d, #003893, #001a4d);
+        color: #fff;
       }
 
       /* Toast + validation */
@@ -283,7 +259,7 @@
       .btnGhost{
         background: rgba(255,255,255,0.10);
         border: 1px solid rgba(255,255,255,0.18);
-        color: white;
+        color: #fff;
         border-radius: 999px;
         padding: 10px 12px;
         font-weight: 800;
@@ -369,7 +345,7 @@
         border-radius: 14px;
         border: 1px solid rgba(255,255,255,0.18);
         background: rgba(0,0,0,0.18);
-        color: white;
+        color: #fff;
         padding: 12px;
         font-size: 13px;
         outline: none;
@@ -459,7 +435,6 @@
       .progressBar{ width:min(520px,100%); height:12px; border-radius:999px; background: rgba(255,255,255,0.14); border:1px solid rgba(255,255,255,0.18); overflow:hidden; }
       .progressFill{ height:100%; background: var(--yellow); width:0%; transition: width .25s ease; }
       .progressText{ font-size:12px; font-weight:900; opacity:.92; }
-
 </style>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
